<resources>
    <string name="app_name">EvrTaxi(Real)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ro_yxatdan_o_tish">Ro\'yxatdan o\'tish</string>
    <string name="kirish">Kirish</string>
    <string name="keyingisi">Keyingisi</string>
    <string name="qayta_jo_natish">Qayta jo’natish</string>
    <string name="boshqa_raqam_kiritish">Boshqa raqam kiritish</string>
    <string name="yuborish">Yuborish</string>
    <string name="erkak">Erkak</string>
    <string name="ayol">Ayol</string>
    <string name="xabarnoma">Xabarnoma</string>
    <string name="xalqaro_buyurtma">Xalqaro buyurtma</string>
    <string name="buyurtmalar_tarixi">Buyurtmalar tarixi</string>
    <string name="buyurtmalar">Buyurtmalar</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="qayerdan">Qayerdan</string>
    <string name="qayerga">Qayerga</string>
    <string name="pochta">Pochta</string>
    <string name="yo_lovchi">Yo’lovchi</string>
    <string name="izlash">Izlash</string>
    <string name="soni">Soni:</string>
    <string name="custom_close_text">Custom Close</string>
    <string name="rationale_title">Permission required</string>
    <string name="rationale_message">we need permission for write <b>storage</b> and find your <b>location</b></string>
    <string-array name="passangercount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>4+</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="shahar">Shahar</string>
    <string name="bugun">Bugun</string>
    <string name="umumiy_chiqim">Umumiy chiqim:</string>
    <string name="title_activity_driver">DriverActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="haydovchi">Haydovchi</string>
    <string name="joylashgan_urningiz">Joylashgan o’rningizni yuboring:</string>
    <string name="qachon">Qachon</string>
    <string name="gpsniyoqing">GPSni yoqing</string>
    <string name="raqamiga_borgan_smsni_kiriting">Raqamiga borgan smsni kiriting</string>
    <string name="chiqish">Chiqish</string>
    <string name="ism">Ism:</string>
    <string name="buyurtma_bekor">Siz rostan ham buyurtmani bekor qilmoqchimisiz?</string>
    <string name="yoq">Yo\'q</string>
    <string name="xa">Xa</string>
    <string name="ketish_vaqtini_tanlang">Ketish vaqtini tanlang</string>
</resources>